# temm1e

./: CLAUDE.md  Cargo.toml  DEV_PROTOCOL.md  FEATURES.md  README.md  SETUP_FOR_NEWBIE.md  TEMM1E_ROADMAP.md  VISION.md  install.sh
.github/workflows/: ci.yml  release.yml
cores/: cambium-auditor.md  cambium-reviewer.md
crates/skyclaw-agent/src/: runtime.rs
crates/skyclaw-agent/tests/: runtime_integration.rs
crates/skyclaw-codex-oauth/src/: responses_provider.rs
crates/skyclaw-gateway/src/: router.rs
crates/skyclaw-providers/src/: lib.rs  openai_compat.rs
crates/skyclaw-tools/: Cargo.toml
crates/skyclaw-tools/src/: browser.rs  check_messages.rs  lib.rs
crates/temm1e-agent/: Cargo.toml
crates/temm1e-agent/examples/: witness_refactor_ab.rs
crates/temm1e-agent/src/: awareness.rs  awareness_engine.rs  budget.rs  context.rs  executor.rs  history_pruning.rs  lib.rs  llm_classifier.rs  proactive.rs  prompt_optimizer.rs  runtime.rs  task_queue.rs
crates/temm1e-agent/tests/: witness_integration.rs
crates/temm1e-cambium/: Cargo.toml
crates/temm1e-cambium/src/: budget.rs  deploy.rs  history.rs  lib.rs  pipeline.rs  sandbox.rs  trust.rs  zone_checker.rs
crates/temm1e-cambium/tests/: deploy_integration_test.rs  exhaustive_matrix_test.rs  real_temm1e_swap_test.rs
crates/temm1e-channels/src/: discord.rs  file_transfer.rs  lib.rs  slack.rs  telegram.rs  whatsapp_web.rs
crates/temm1e-codex-oauth/: Cargo.toml
crates/temm1e-codex-oauth/src/: callback_server.rs  lib.rs  responses_provider.rs  token_store.rs
crates/temm1e-core/src/: orchestrator_impl.rs
crates/temm1e-filestore/src/: lib.rs  local.rs  s3.rs
crates/temm1e-hive/src/: lib.rs  types.rs  worker.rs
crates/temm1e-perpetuum/: Cargo.toml
crates/temm1e-perpetuum/src/: conscience.rs  cortex.rs  log_scanner.rs  self_work.rs  tools.rs
crates/temm1e-perpetuum/tests/: cambium_skills_test.rs  real_llm_grow_skills_test.rs
crates/temm1e-tools/: Cargo.toml
crates/temm1e-watchdog/: Cargo.toml
crates/temm1e-watchdog/src/: main.rs
docs/: AGENTIC_CORE_ARCHITECTURE.md  AGENTIC_CORE_V2_BENCHMARK.md  AGENTIC_CORE_V2_BENCHMARK_TOOLS.md  AGENTIC_CORE_V2_EXPERIMENT_INSIGHTS.md  AGENTIC_CORE_V2_PLAN.md  AGENTIC_CORE_V2_RELEASE.md  AGI_FULL_COMPUTER_USE.md  FULL_SWEEP_PROTOCOL.md  RELEASE_PROTOCOL.md
docs/benchmarks/: BENCHMARK_REPORT.md
docs/full-sweep-1/: fix-plan.md  test-report.md
src/: main.rs
tems_lab/cambium/: CAMBIUM_RESEARCH_PAPER.md
tems_lab/consciousness/: EXPERIMENT_REPORT.md
tems_lab/debug/: EDGE_CASES.md
tems_lab/swarm/: AB_REPORT_JIT.md  ab_jit_runner.sh
tems_lab/witness/: EXPERIMENT_REPORT.md  ab_results.json
(+49 files in other folders)
