[package]
name = "temm1e-perpetuum"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Perpetuum: perpetual time-aware entity framework for TEMM1E"

[dependencies]
temm1e-core = { path = "../temm1e-core" }
temm1e-observable = { path = "../temm1e-observable" }
temm1e-tools = { path = "../temm1e-tools" }
dirs.workspace = true
tokio = { workspace = true, features = ["rt", "time", "sync", "macros"] }
tokio-util = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
chrono-tz = { workspace = true }
cron = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
scraper = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
sha2 = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
temm1e-test-utils = { path = "../temm1e-test-utils" }
temm1e-skills = { path = "../temm1e-skills" }
temm1e-providers = { path = "../temm1e-providers" }
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
